kfileitemmodelrolesupdater: fix directory item count for large folders

Dolphin reported an incorrect item count in the "Size" column for directories containing 200 or more entries.

Use KIO::ListJob::ListFlag::ExcludeDotAndDotDot and ExcludeHidden to filter entries at the source.

Use a local counter (totalCount) captured via std::shared_ptr in the lambda to ensure each scan job starts from zero and maintains its own state.

Add a fast path using list.size() when showDirectoriesOnly is false to improve performance.

BUG: 509150